@@ -9,6 +9,7 @@ SubVersion: $Id$
 	- [roms]  $2420: fixed bug introduced in $2417
 	- [roms]  $2421: fixed double-free when DnD files to send
 	- [kevin] $2422: fixed errors (wrong case) in ROM_CALL list and added 2 new entries from TIGCC
+	- [kevin] $2424: don't disassemble instructions invalid for the 68000
 
 - ??/??/2007, version 2.81e
 	- [kevin] $2348: delete the temporary file instead of erroring if the user cancels the receive file dialog
